# openapi.yaml
@@ -89,6 +89,25 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/api.v1.user.EmptyReply'
+    /api/user/personalAuth:
+        post:
+            tags:
+                - User
+            description: 个人认证
+            operationId: User_UserPersonAuth
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/api.v1.user.UserPersonAuthRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/api.v1.user.EmptyReply'
     /api/user/registerByEmail:
         post:
             tags:
@@ -280,6 +299,17 @@ components:
             type: object
             properties:
                 mobile:
+                    type: string
+        api.v1.user.UserPersonAuthRequest:
+            type: object
+            properties:
+                name:
+                    type: string
+                card:
+                    type: string
+                mobile:
+                    type: string
+                mobilePre:
                     type: string
         helloworld.v1.HelloReply:
             type: object
